src/objects/Box_OAuth__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Stores each user&apos;s authentication token for Box</description>
    <fields>
        <fullName>AuthTokenExpires__c</fullName>
        <description>Date/Time the auth token expires. If expired and the refresh token is still valid, then a refresh will be needed to get a new auth token.</description>
        <label>Auth Token Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <description>The User&apos;s Auth Token</description>
        <label>Auth Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshTokenExpires__c</fullName>
        <description>Date / Time the Refresh Token expires. If expired, then the user will need to reauthenticate with Box.</description>
        <label>Refresh Token Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box OAuth</label>
</CustomObject>